Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18630

Find files : "Relevance" columns shows file name, not "relevance"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.15
    • Shell
    • None

    Description

      reactos-bootcd-0.4.15-dev-5357-g11a7141-x86-gcc-lin-dbg

      • Open Explorer Search
      • "Relevance" colums is hidden while it should not, make it visible manually ( see : CORE-18629 )
      •  file name is displayed (instead of "relevance")

      Culprit is CFindFolder::GetDetailsOf in https://git.reactos.org/?p=reactos.git;a=blob;f=dll/win32/browseui/shellfind/CFindFolder.cpp#l663 which should "return SHSetStrRet(&pDetails->str, "");" for unsupported "Relevance" column index 2

      See patch : Find.patch

      Attachments

        Activity

          People

            qwn qwn
            KRosUser KRosUser
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: