[CORE-18630](https://jira.reactos.org/browse/CORE-18630)

Do not show file names in  the relevance column until relevance is caluclated